<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/LoginUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems = "10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_login_hint"
            android:layout_margin="10dp"
            android:autofillHints="@string/email_login_hint" />

        <EditText
            android:id="@+id/LoginUserPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems = "10"
            android:inputType="textPassword"
            android:hint="@string/pw_login_hint"
            android:layout_margin="10dp"
            android:autofillHints="@string/pw_login_hint"
            />

        <EditText
            android:id="@+id/LoginUserPW2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems = "10"
            android:inputType="textPassword"
            android:hint="@string/pw2_login_hint"
            android:layout_margin="10dp"
            android:autofillHints="@string/pw_login_hint"
            />

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"/>

        <TextView
            android:id="@+id/LoginTextSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:layout_margin="15dp"
            android:gravity="center"
            android:clickable="true"
            />


    </LinearLayout>

</FrameLayout>