<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="258dp"
            android:layout_height="54dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text= "@string/permission_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/GrantPermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grant_now_button" />

        <Button
            android:id="@+id/grant_background_position_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grant_background_position_button"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>